@@ -197,7 +197,6 @@ setup(name="ZODB3",
         'zc.lockfile',
         'ZConfig',
         'zdaemon',
-        'zope.event',
         'zope.interface',
         ],
       zip_safe = False,
